--- a/ui/Skill.ui
+++ b/ui/Skill.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>82</width>
-    <height>152</height>
+    <width>94</width>
+    <height>165</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -30,8 +30,97 @@
     <number>0</number>
    </property>
    <property name="verticalSpacing">
-    <number>5</number>
+    <number>6</number>
    </property>
+   <item row="1" column="0">
+    <widget class="QSpinBox" name="spinBoxMax">
+     <property name="enabled">
+      <bool>true</bool>
+     </property>
+     <property name="minimumSize">
+      <size>
+       <width>40</width>
+       <height>25</height>
+      </size>
+     </property>
+     <property name="maximumSize">
+      <size>
+       <width>40</width>
+       <height>25</height>
+      </size>
+     </property>
+     <property name="toolTip">
+      <string>The higherst level for the current char level.</string>
+     </property>
+     <property name="autoFillBackground">
+      <bool>false</bool>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">QSpinBox{color: rgb(255, 0, 0)};</string>
+     </property>
+     <property name="inputMethodHints">
+      <set>Qt::ImhDigitsOnly</set>
+     </property>
+     <property name="frame">
+      <bool>true</bool>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+     </property>
+     <property name="readOnly">
+      <bool>true</bool>
+     </property>
+     <property name="buttonSymbols">
+      <enum>QAbstractSpinBox::NoButtons</enum>
+     </property>
+    </widget>
+   </item>
+   <item row="2" column="0">
+    <widget class="QSpinBox" name="spinBoxLevel">
+     <property name="minimumSize">
+      <size>
+       <width>40</width>
+       <height>25</height>
+      </size>
+     </property>
+     <property name="maximumSize">
+      <size>
+       <width>40</width>
+       <height>25</height>
+      </size>
+     </property>
+     <property name="cursor">
+      <cursorShape>SizeVerCursor</cursorShape>
+     </property>
+     <property name="toolTip">
+      <string>The currently set level.</string>
+     </property>
+     <property name="autoFillBackground">
+      <bool>false</bool>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">QSpinBox{color: rgb(0, 0, 0)};</string>
+     </property>
+     <property name="wrapping">
+      <bool>false</bool>
+     </property>
+     <property name="frame">
+      <bool>true</bool>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+     </property>
+     <property name="readOnly">
+      <bool>false</bool>
+     </property>
+     <property name="buttonSymbols">
+      <enum>QAbstractSpinBox::PlusMinus</enum>
+     </property>
+     <property name="value">
+      <number>0</number>
+     </property>
+    </widget>
+   </item>
    <item row="0" column="0" alignment="Qt::AlignHCenter">
     <widget class="QLabel" name="labelPic">
      <property name="sizePolicy">
@@ -72,36 +161,11 @@
      </property>
     </widget>
    </item>
-   <item row="1" column="0">
-    <widget class="QSpinBox" name="spinBoxMax">
-     <property name="minimumSize">
-      <size>
-       <width>40</width>
-       <height>25</height>
-      </size>
-     </property>
-     <property name="maximumSize">
-      <size>
-       <width>40</width>
-       <height>16777215</height>
-      </size>
-     </property>
-     <property name="toolTip">
-      <string>The higherst level for the current char level.</string>
-     </property>
-     <property name="alignment">
-      <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-     </property>
-     <property name="readOnly">
+   <item row="3" column="0">
+    <widget class="QSpinBox" name="spinBoxCost">
+     <property name="enabled">
       <bool>true</bool>
      </property>
-     <property name="buttonSymbols">
-      <enum>QAbstractSpinBox::NoButtons</enum>
-     </property>
-    </widget>
-   </item>
-   <item row="2" column="0">
-    <widget class="QSpinBox" name="spinBoxLevel">
      <property name="minimumSize">
       <size>
        <width>40</width>
@@ -111,20 +175,14 @@
      <property name="maximumSize">
       <size>
        <width>40</width>
-       <height>16777215</height>
+       <height>25</height>
       </size>
      </property>
-     <property name="cursor">
-      <cursorShape>SizeVerCursor</cursorShape>
+     <property name="statusTip">
+      <string>The cost for the next level up.</string>
      </property>
-     <property name="toolTip">
-      <string>The currently set level.</string>
-     </property>
-     <property name="autoFillBackground">
-      <bool>false</bool>
-     </property>
-     <property name="wrapping">
-      <bool>false</bool>
+     <property name="styleSheet">
+      <string notr="true">QSpinBox{color: rgb(0, 0,255)};</string>
      </property>
      <property name="frame">
       <bool>true</bool>
@@ -133,37 +191,6 @@
       <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
      </property>
      <property name="readOnly">
-      <bool>false</bool>
-     </property>
-     <property name="buttonSymbols">
-      <enum>QAbstractSpinBox::PlusMinus</enum>
-     </property>
-     <property name="value">
-      <number>0</number>
-     </property>
-    </widget>
-   </item>
-   <item row="3" column="0">
-    <widget class="QSpinBox" name="spinBoxCost">
-     <property name="minimumSize">
-      <size>
-       <width>40</width>
-       <height>25</height>
-      </size>
-     </property>
-     <property name="maximumSize">
-      <size>
-       <width>40</width>
-       <height>16777215</height>
-      </size>
-     </property>
-     <property name="statusTip">
-      <string>The cost for the next level up.</string>
-     </property>
-     <property name="alignment">
-      <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-     </property>
-     <property name="readOnly">
       <bool>true</bool>
      </property>
      <property name="buttonSymbols">
@@ -171,8 +198,11 @@
      </property>
     </widget>
    </item>
-   <item row="4" column="0">
+   <item row="5" column="0">
     <widget class="QSpinBox" name="spinBoxTotal">
+     <property name="enabled">
+      <bool>true</bool>
+     </property>
      <property name="minimumSize">
       <size>
        <width>40</width>
@@ -182,11 +212,17 @@
      <property name="maximumSize">
       <size>
        <width>40</width>
-       <height>16777215</height>
+       <height>25</height>
       </size>
      </property>
      <property name="toolTip">
       <string>The total amount of SP used for this Skill</string>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">QSpinBox{color: rgb(0, 170, 0)};</string>
+     </property>
+     <property name="frame">
+      <bool>true</bool>
      </property>
      <property name="alignment">
       <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
@@ -202,6 +238,13 @@
      </property>
      <property name="value">
       <number>0</number>
+     </property>
+    </widget>
+   </item>
+   <item row="4" column="0">
+    <widget class="Line" name="line">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
      </property>
     </widget>
    </item>
