--- a/ui/SkillBox.ui
+++ b/ui/SkillBox.ui
@@ -6,66 +6,151 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>82</width>
-    <height>101</height>
+    <width>94</width>
+    <height>198</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>SkillBox</string>
   </property>
   <property name="title">
-   <string/>
+   <string>SkillBox</string>
   </property>
   <layout class="QHBoxLayout" name="mainLayout">
    <property name="spacing">
     <number>3</number>
    </property>
    <property name="leftMargin">
-    <number>6</number>
-   </property>
-   <property name="topMargin">
     <number>0</number>
    </property>
-   <property name="rightMargin">
+   <property name="topMargin">
     <number>6</number>
    </property>
+   <property name="rightMargin">
+    <number>0</number>
+   </property>
    <property name="bottomMargin">
-    <number>6</number>
+    <number>0</number>
    </property>
    <item>
     <layout class="QGridLayout" name="gridLayout">
-     <item row="0" column="0" alignment="Qt::AlignVCenter">
+     <property name="leftMargin">
+      <number>2</number>
+     </property>
+     <property name="rightMargin">
+      <number>2</number>
+     </property>
+     <property name="horizontalSpacing">
+      <number>0</number>
+     </property>
+     <item row="5" column="0">
+      <widget class="QLabel" name="label_5">
+       <property name="minimumSize">
+        <size>
+         <width>0</width>
+         <height>25</height>
+        </size>
+       </property>
+       <property name="maximumSize">
+        <size>
+         <width>16777215</width>
+         <height>25</height>
+        </size>
+       </property>
+       <property name="text">
+        <string>Total:</string>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="0">
+      <widget class="QLabel" name="label_2">
+       <property name="minimumSize">
+        <size>
+         <width>0</width>
+         <height>25</height>
+        </size>
+       </property>
+       <property name="maximumSize">
+        <size>
+         <width>16777215</width>
+         <height>25</height>
+        </size>
+       </property>
+       <property name="text">
+        <string>Max:</string>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="0">
       <widget class="QLabel" name="label">
+       <property name="minimumSize">
+        <size>
+         <width>0</width>
+         <height>32</height>
+        </size>
+       </property>
+       <property name="maximumSize">
+        <size>
+         <width>16777215</width>
+         <height>32</height>
+        </size>
+       </property>
        <property name="text">
         <string>Skill:</string>
        </property>
       </widget>
      </item>
-     <item row="1" column="0" alignment="Qt::AlignVCenter">
-      <widget class="QLabel" name="label_2">
-       <property name="text">
-        <string>MaxLevel:</string>
-       </property>
-      </widget>
-     </item>
-     <item row="2" column="0" alignment="Qt::AlignVCenter">
+     <item row="2" column="0">
       <widget class="QLabel" name="label_3">
+       <property name="minimumSize">
+        <size>
+         <width>0</width>
+         <height>25</height>
+        </size>
+       </property>
+       <property name="maximumSize">
+        <size>
+         <width>16777215</width>
+         <height>25</height>
+        </size>
+       </property>
        <property name="text">
         <string>Level:</string>
        </property>
       </widget>
      </item>
-     <item row="3" column="0" alignment="Qt::AlignVCenter">
+     <item row="3" column="0">
       <widget class="QLabel" name="label_4">
+       <property name="minimumSize">
+        <size>
+         <width>0</width>
+         <height>25</height>
+        </size>
+       </property>
+       <property name="maximumSize">
+        <size>
+         <width>16777215</width>
+         <height>25</height>
+        </size>
+       </property>
        <property name="text">
         <string>Cost:</string>
        </property>
       </widget>
      </item>
-     <item row="4" column="0" alignment="Qt::AlignVCenter">
-      <widget class="QLabel" name="label_5">
-       <property name="text">
-        <string>Total:</string>
+     <item row="4" column="0">
+      <widget class="QWidget" name="widget" native="true">
+       <property name="minimumSize">
+        <size>
+         <width>0</width>
+         <height>3</height>
+        </size>
+       </property>
+       <property name="maximumSize">
+        <size>
+         <width>16777215</width>
+         <height>3</height>
+        </size>
        </property>
       </widget>
      </item>
