--- a/ui/NewChar.ui
+++ b/ui/NewChar.ui
@@ -75,7 +75,10 @@
         <enum>QFrame::Panel</enum>
        </property>
        <property name="frameShadow">
-        <enum>QFrame::Sunken</enum>
+        <enum>QFrame::Raised</enum>
+       </property>
+       <property name="lineWidth">
+        <number>2</number>
        </property>
        <property name="text">
         <string/>
